update register and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.datasource.password=password
 # JPA configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.data.jpa.repositories.bootstrap-mode=default
+
+server.port: 8081
+management.port: 8082
+management.address: 127.0.0.1
+
+logging.level.root=debug
