--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,18 @@
 spring.application.name=Back
-
-spring.h2.console.enabled=true
-spring.jpa.properties.hibernate.generate_statistics=true
-logging.level.org.hibernate.stat=debug
-spring.jpa.show-sql=true
+spring.h2.console.enabled=false
+spring.jpa.properties.hibernate.generate_statistics=false
+logging.level.org.hibernate.stat=warn
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.type=warn
 spring.datasource.url=jdbc:h2:mem:coffees
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-
 # JPA configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.data.jpa.repositories.bootstrap-mode=default
-
-server.port: 8081
-management.port: 8082
-management.address: 127.0.0.1
-
-logging.level.root=debug
+server.port=8081
+management.port=8082
+management.address=127.0.0.1
+logging.level.root=info
